# kelojson

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml
docs/: coding_conventions.md  contribution_guidelines.md
include/kelojson/: Map.h  Print.h
include/kelojson/layer/: Layer.h  LayerFactory.h  LayerType.h
include/kelojson/layer/areas/: Area.h  AreaPlanner.h  AreaType.h  AreasLayer.h  DoorType.h  Transition.h
include/kelojson/layer/occupancy/: OccupancyGrid.h  OccupancyGridLayer.h
include/kelojson/layer/topology/: TopologyEdge.h  TopologyLayer.h  TopologyNode.h  TopologyPlanner.h
include/kelojson/layer/zones/: ChargingStationZone.h  ElevatorZone.h  ForbiddenZone.h  LoadParkingZone.h  NodeZone.h  OcclusionZone.h  PolygonZone.h  PolylineZone.h  RampZone.h  StairsZone.h  TransferStationZone.h  WaitingLocationZone.h  Zone.h  ZoneType.h  ZonesLayer.h
include/kelojson/osm/: NodePrimitive.h  Primitive.h  PrimitiveFactory.h  PrimitiveType.h  PrimitiveUtils.h  RelationPrimitive.h  WayPrimitive.h
include/kelojson_loader/: KelojsonAreasLayer.h  KelojsonLayer.h  KelojsonMap.h  KelojsonTopologyLayer.h  KelojsonTypes.h  KelojsonZonesLayer.h  Map.h  OsmPrimitives.h
include/kelojson_loader/layer/: Layer.h  LayerFactory.h  LayerType.h
include/kelojson_loader/layer/areas/: Area.h  AreaPlanner.h  AreaType.h  AreasLayer.h  DoorType.h  Transition.h
include/kelojson_loader/layer/occupancy/: OccupancyGrid.h  OccupancyGridLayer.h
include/kelojson_loader/layer/topology/: TopologyEdge.h  TopologyLayer.h  TopologyNode.h
include/kelojson_loader/layer/zones/: ChargingStationZone.h  ForbiddenZone.h  LoadParkingZone.h  NodeZone.h  OcclusionZone.h  PolygonZone.h  PolylineZone.h  RampZone.h  TransferStationZone.h  WaitingLocationZone.h  Zone.h  ZoneType.h  ZonesLayer.h
include/kelojson_loader/osm/: NodePrimitive.h  Primitive.h  PrimitiveFactory.h  PrimitiveType.h  PrimitiveUtils.h  RelationPrimitive.h  WayPrimitive.h
src/: KelojsonAreasLayer.cpp  KelojsonLayer.cpp  KelojsonMap.cpp  KelojsonTopologyLayer.cpp  KelojsonTypes.cpp  KelojsonZonesLayer.cpp  Map.cpp  OsmPrimitives.cpp
src/layer/: LayerFactory.cpp
src/layer/areas/: Area.cpp  AreaPlanner.cpp  AreasLayer.cpp  Transition.cpp
src/layer/occupancy/: OccupancyGrid.cpp  OccupancyGridLayer.cpp
src/layer/topology/: TopologyEdge.cpp  TopologyLayer.cpp  TopologyNode.cpp  TopologyPlanner.cpp
src/layer/zones/: LoadParkingZone.cpp  NodeZone.cpp  OcclusionZone.cpp  PolygonZone.cpp  PolylineZone.cpp  RampZone.cpp  TransferStationZone.cpp  Zone.cpp  ZonesLayer.cpp
src/osm/: NodePrimitive.cpp  Primitive.cpp  PrimitiveFactory.cpp  PrimitiveUtils.cpp  RelationPrimitive.cpp  WayPrimitive.cpp
test/: CMakeLists.txt  areas_layer_test.cpp  map_test.cpp  occupancy_grid_layer_test.cpp  topology_layer_test.cpp  zones_layer_test.cpp
test/map/two_rooms/: two_rooms.kelojson  two_rooms.osm  two_rooms.png.cal
