<?xml version="1.0"?>
<package format="2">
    <name>kelojson_loader</name>
    <version>0.1.0</version>
    <description>Package to load kelojson map data</description>

    <author email="sushant.chavan@kelo-robotics.com">Sushant Chavan</author>

    <maintainer email="nowak@kelo-robotics.com">Walter Nowak</maintainer>
    <maintainer email="sushant.chavan@kelo-robotics.com">Sushant Chavan</maintainer>

    <license>LGPL/BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_common</depend>
    <depend>yaml_common</depend>

</package>
